Fix sodium-native native module error on Railway
- Add Dockerfile with build dependencies (python3, make, g++)
- Configure Next.js to exclude native modules from client bundling
- Add postinstall script to rebuild sodium-native
- Update Railway build command to rebuild native modules
- Add troubleshooting section for native module errors

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "postinstall": "npm rebuild sodium-native || true"
   },
   "dependencies": {
     "@scure/bip39": "^1.6.0",
